--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -7,8 +7,8 @@
           href: microsoft-365-copilot-overview.md
         - name: Get your data ready for Microsoft 365 Copilot
           items:
-            - name: Set up Microsoft 365 Copilot
-              href: ORIGINAL-microsoft-365-copilot-setup.md
+            - name: ORIGINAL-Set up Microsoft 365 Copilot
+              href: microsoft-365-copilot-setup.md
             - name: Best in class deployment
               href: copilot-best-in-class.md
     - name: Deploy and enable
