--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -7,13 +7,13 @@
           href: microsoft-365-copilot-overview.md
         - name: Get your data ready for Microsoft 365 Copilot
           items:
-            - name: Understand licensing for Microsoft 365 Copilot
+            - name: License options for Microsoft 365 Copilot
               href: microsoft-365-copilot-licensing.md
             - name: E3 and E5 feature comparison list for Copilot
               href: microsoft-365-copilot-e3-e5-overview.md
-            - name: E3 Microsoft 365 Copilot guide
+            - name: E3 guide for Microsoft 365 Copilot
               href: microsoft-365-copilot-e3-guide.md
-            - name: E5 Microsoft 365 Copilot guide
+            - name: E5 guide for Microsoft 365 Copilot
               href: microsoft-365-copilot-e5-guide.md
     - name: Deploy and enable
       items: 
