--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -61,5 +61,5 @@
           href: /training/paths/prepare-your-organization-microsoft-365-copilot/
         - name: "Copilot lab: End user resources"
           href: https://copilot.cloud.microsoft/prompts
-        - name: Provide Copilot feedback to Microsoft
+        - name: Submit Copilot feedback to Microsoft
           href: provide-feedback.md
