Major article rewrite

--- a/microsoft-365/commerce/licenses/product-keys-faq.yml
+++ b/microsoft-365/commerce/licenses/product-keys-faq.yml
@@ -275,6 +275,6 @@ additionalContent: |
 
   ## Additional resources
   
-  - [Downloads FAQ](downloads-faq.yml)
+  - [Download volume licensing products](downloads-faq.md)
 
   - [Online service activation for Open programs FAQ](online-service-activation-faq.yml)
