--- a/microsoft-365/commerce/licenses/product-keys-faq.yml
+++ b/microsoft-365/commerce/licenses/product-keys-faq.yml
@@ -59,7 +59,7 @@ sections:
 
           However, some products don't require a product key. This information is listed in the product description in the Downloads and Keys catalog.
 
-          To determine if your product requires a key, go to [Product activation and key information](https://licensingapps.microsoft.com/product-activation). Under Find Products, choose a product or search for your product name.
+        # To determine if your product requires a key, go to [Product activation and key information](https://licensingapps.microsoft.com/product-activation). Under Find Products, choose a product or search for your product name.
 
       - question: |
           What is a setup key?
@@ -242,7 +242,9 @@ sections:
       - question: |
           Can I use my Volume License Keys to exercise my re-imaging rights?
         answer: |
-          Yes. Re-imaging rights are granted to all Microsoft Volume Licensing customers. Under these rights, customers can re-image Original Equipment Manufacturer (OEM) or Full Packaged Product (FPP) licensed copies by using media provided under their agreement if the copies made from the Volume Licensing media are identical to the original licensed product. As a Volume Licensing customer, you can find the Volume License Keys on the product key page or request your keys through a [Microsoft Activation Center](https://licensingapps.microsoft.com/product-activation).
+          Yes. Re-imaging rights are granted to all Microsoft Volume Licensing customers. Under these rights, customers can re-image Original Equipment Manufacturer (OEM) or Full Packaged Product (FPP) licensed copies by using media provided under their agreement if the copies made from the Volume Licensing media are identical to the original licensed product. 
+          
+        # As a Volume Licensing customer, you can find the Volume License Keys on the product key page or request your keys through a [Microsoft Activation Center](https://licensingapps.microsoft.com/product-activation).
 
           > [!NOTE]
           > If you're an Open License customer, you must purchase at least one unit of the product that you want to re-image to obtain access to the product media and receive a product key.
