changed filename, fixed redirect URL

--- a/microsoft-365/commerce/licenses/product-keys-faq.yml
+++ b/microsoft-365/commerce/licenses/product-keys-faq.yml
@@ -273,6 +273,6 @@ additionalContent: |
 
   ## Additional resources
   
-  - [Download volume licensing products](downloads-faq.md)
+  - [Download volume licensing products](download-vl-products.md)
 
   - [Online service activation for Open programs FAQ](online-service-activation-faq.yml)
