--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -29,6 +29,8 @@
           href: /microsoft-365/admin/activity-reports/microsoft-365-copilot-usage?toc=%2Fcopilot%2Fmicrosoft-365%2Ftoc.json&bc=%2Fcopilot%2Fmicrosoft-365%2Fbreadcrumb%2Ftoc.json
         - name: Pin Microsoft Copilot to the navigation bar
           href: pin-copilot.md
+        - name: Enable Facilitator in Microsoft Teams
+          href: /microsoftteams/facilitator-teams?toc=%2Fcopilot%2Fmicrosoft-365%2Ftoc.json&bc=%2Fmicrosoft-365-copilot%2Fbreadcrumb%2Ftoc.json
         - name: Manage Copilot for Microsoft Teams meetings and events
           href: /microsoftteams/copilot-teams-transcription?toc=%2Fcopilot%2Fmicrosoft-365%2Ftoc.json&bc=%2Fmicrosoft-365-copilot%2Fbreadcrumb%2Ftoc.json
         - name: Set up Copilot in Viva Engage
