--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -19,7 +19,7 @@
               href: microsoft-365-copilot-e5-guide.md
     - name: Deploy and enable
       items: 
-        - name: Get started with Microsoft 365 Copilot
+        - name: Set up Microsoft 365 Copilot
           href: microsoft-365-copilot-setup.md
         - name: Requirements for Microsoft 365 Copilot
           href: microsoft-365-copilot-requirements.md
