--- a/copilot/TOC.yml
+++ b/copilot/TOC.yml
@@ -7,7 +7,7 @@
           href: microsoft-365-copilot-overview.md
         - name: Architecture & how Copilot works
           href: microsoft-365-copilot-architecture.md
-        - name: Data protection and auditing architecture
+        - name: Data protection and auditing
           href: microsoft-365-copilot-architecture-data-protection-auditing.md
         - name: Get your data ready for Microsoft 365 Copilot
           items:
@@ -15,25 +15,25 @@
               href: microsoft-365-copilot-licensing.md
             - name: License feature comparison list
               href: microsoft-365-copilot-license-feature-overview.md
-            - name: E3 feature guide
+            - name: E3 implementation guide
               href: microsoft-365-copilot-e3-guide.md
-            - name: E5 feature guide
+            - name: E5 implementation guide
               href: microsoft-365-copilot-e5-guide.md
     - name: Deploy and enable Microsoft 365 Copilot
       items: 
-        - name: Set up Microsoft 365 Copilot
+        - name: Set up and assign licenses
           href: microsoft-365-copilot-setup.md
-        - name: Requirements for Microsoft 365 Copilot
+        - name: Requirements and prerequisites
           href: microsoft-365-copilot-requirements.md
-        - name: Understand licensing for Microsoft 365 Copilot
+        - name: License add-on list
           href: microsoft-365-copilot-licensing.md
-        - name: Enable users for Microsoft 365 Copilot 
+        - name: Enable users and welcome email
           href: microsoft-365-copilot-enable-users.md  
         - name: Copilot Prompt Gallery
           href: copilot-prompt-gallery.md
         - name: Adoption resources
           href: microsoft-365-copilot-enablement-resources.md
-    - name: Manage
+    - name: Viva and Microsoft 365 Copilot usage
       items:
         - name: Manage Microsoft 365 Copilot settings
           href: microsoft-365-copilot-page.md
@@ -65,15 +65,15 @@
           href: enterprise-data-protection.md
         - name: Transparency Note
           href: microsoft-365-copilot-transparency-note.md    
-    - name: Extend and build
+    - name: Extensibility and building agents
       items:
         - name: Extend Microsoft 365 Copilot
           href: /microsoft-365-copilot/extensibility?toc=%2Fcopilot%2Fmicrosoft-365%2Ftoc.json&bc=%2Fcopilot%2Fmicrosoft-365%2Fbreadcrumb%2Ftoc.json
-    - name: Resources
+    - name: Service description and training for Microsoft 365 Copilot
       items:
         - name: Service description
           href: /office365/servicedescriptions/office-365-platform-service-description/microsoft-365-copilot?toc=%2Fcopilot%2Fmicrosoft-365%2Ftoc.json&bc=%2Fcopilot%2Fmicrosoft-365%2Fbreadcrumb%2Ftoc.json
-        - name: Technical training for Microsoft 365 Copilot
+        - name: Technical training
           href: /training/paths/prepare-your-organization-microsoft-365-copilot/
         - name: "Copilot: End user resources"
           href: https://copilot.cloud.microsoft/prompts
