--- a/microsoft-365/frontline/TOC.yml
+++ b/microsoft-365/frontline/TOC.yml
@@ -85,24 +85,13 @@
       href: set-up-open-shifts-across-locations.md 
     - name: Shifts data FAQ
       href: /microsoftteams/expand-teams-across-your-org/shifts/shifts-data-faq?bc=/microsoft-365/frontline/breadcrumb/toc.json&toc=/microsoft-365/frontline/toc.json
-    - name: Shifts connectors
+    - name: Workforce management integration
       items: 
-      - name: Overview
+      - name: Shifts connectors
         href: shifts-connectors.md
-      - name: Connect Shifts to Blue Yonder WFM
         items:
-        - name: Use the Shifts connector wizard to set up a connection to Blue Yonder WFM
-          href: shifts-connector-wizard.md
-        - name: Use PowerShell to set up a connection to Blue Yonder WFM
-          href: shifts-connector-blue-yonder-powershell-setup.md
-        - name: Use the Microsoft 365 admin center to manage your connection to Blue Yonder WFM
-          href: shifts-connector-blue-yonder-admin-center-manage.md
-        - name: Use PowerShell to manage your connection to Blue Yonder WFM
-          href: shifts-connector-powershell-manage.md
-        - name: Known issues
-          href: shifts-connector-blue-yonder-known-issues.md
-      - name: Connect Shifts to UKG Pro WFM
-        items:
+        - name: Set up the Shifts connector for UKG Pro WFM
+          items:
         - name: Prerequisites
           href: shifts-connector-ukg-prerequisites.md
         - name: Use the Shifts connector wizard to set up a connection to UKG Pro WFM
@@ -114,7 +103,21 @@
         - name: Use PowerShell to manage your connection to UKG Pro WFM
           href: shifts-connector-ukg-powershell-manage.md
         - name: Known issues
-          href: shifts-connector-ukg-known-issues.md
+          href: shifts-connector-ukg-known-issues.md 
+        - name: Set up the Shifts connector for Blue Yonder
+          items:
+        - name: Use the Shifts connector wizard to set up a connection to Blue Yonder WFM
+          href: shifts-connector-wizard.md
+        - name: Use PowerShell to set up a connection to Blue Yonder WFM
+          href: shifts-connector-blue-yonder-powershell-setup.md
+        - name: Use the Microsoft 365 admin center to manage your connection to Blue Yonder WFM
+          href: shifts-connector-blue-yonder-admin-center-manage.md
+        - name: Use PowerShell to manage your connection to Blue Yonder WFM
+          href: shifts-connector-powershell-manage.md
+        - name: Known issues
+          href: shifts-connector-blue-yonder-known-issues.md
+      - name: Create a custom WFM integration 
+        href: shifts-custom-connector.md
   - name: Digitized processes
     items: 
     - name: Simplify business processes
