--- a/microsoft-365/frontline/TOC.yml
+++ b/microsoft-365/frontline/TOC.yml
@@ -87,7 +87,7 @@
       href: /microsoftteams/expand-teams-across-your-org/shifts/shifts-data-faq?bc=/microsoft-365/frontline/breadcrumb/toc.json&toc=/microsoft-365/frontline/toc.json
     - name: Workforce management integrations
       items: 
-      - name: Shifts connectors
+      - name: Overview
         href: shifts-connectors.md
         items:
         - name: Set up the Shifts connector for UKG Pro WFM
