--- a/microsoft-365/frontline/TOC.yml
+++ b/microsoft-365/frontline/TOC.yml
@@ -87,9 +87,10 @@
       href: /microsoftteams/expand-teams-across-your-org/shifts/shifts-data-faq?bc=/microsoft-365/frontline/breadcrumb/toc.json&toc=/microsoft-365/frontline/toc.json
     - name: Workforce management integrations
       items: 
-      - name: Overview
-        href: shifts-connectors.md
-        items:
+      - name: Shifts connectors
+        items: 
+        - name: Overview
+          href: shifts-connectors.md
         - name: Set up the Shifts connector for UKG Pro WFM
           items:
           - name: Prerequisites
