--- a/microsoft-365/frontline/TOC.yml
+++ b/microsoft-365/frontline/TOC.yml
@@ -105,7 +105,7 @@
             href: shifts-connector-ukg-powershell-manage.md
           - name: Known issues
             href: shifts-connector-ukg-known-issues.md 
-        - name: Set up the Shifts connector for Blue Yonder
+        - name: Set up the Shifts connector for Blue Yonder WFM
           items:
           - name: Use the Shifts connector wizard to set up a connection to Blue Yonder WFM
             href: shifts-connector-wizard.md
