--- a/copilot/index.yml
+++ b/copilot/index.yml
@@ -16,7 +16,7 @@ metadata:
   - magic-ai-copilot
   author: samanro #Required; your GitHub user alias, with correct capitalization.
   ms.author: samanro #Required; microsoft alias of author; optional team alias.
-  ms.date: 08/09/2024 #Required; mm/dd/yyyy format.
+  ms.date: 11/13/2024 #Required; mm/dd/yyyy format.
   ms.custom: [copilot-learning-hub]
 
 # conceptualContent section (Optional; Remove if not applicable.)
@@ -30,7 +30,10 @@ conceptualContent:
           links:
             - url: microsoft-365-copilot-overview.md
               itemType: overview
-              text: A technical introduction to Microsoft 365 Copilot
+              text: Introduction to Microsoft 365 Copilot
+            - url: microsoft-365/microsoft-365-copilot-architecture.md
+              itemType: architecture
+              text: Microsoft 365 Copilot architecture and illustrations
             - url: https://www.youtube.com/playlist?list=PLXtHYVsvn_b-NeN9BbLb5sLpIGfdP8j78
               itemType: video
               text: Mechanics Microsoft 365 Copilot playlist
@@ -43,15 +46,21 @@ conceptualContent:
             - url: microsoft-365-copilot-privacy.md
               itemType: concept
               text: How Microsoft 365 Copilot protects organizational data
+            - url: microsoft-365-copilot-architecture-data-protection-auditing.md
+              itemType: concept
+              text: Data protection and auditing in Microsoft 365 Copilot
         # Card
         - title: Get ready for Microsoft 365 Copilot
           links:
+            - url: microsoft-365-copilot-e3-guide.md
+              itemType: concept
+              text: E3 implementation guide
+            - url: microsoft-365-copilot-e5-guide.md
+              itemType: concept
+              text: E5 implementation guide
             - url: microsoft-365-copilot-licensing.md
               itemType: concept
               text: Licensing requirements
-            - url: microsoft-365-copilot-requirements.md
-              itemType: concept
-              text: Technical prerequisites
             - url: https://www.microsoft.com/en-us/solutionassessments/safeedbackform
               itemType: get-started
               text: Microsoft 365 Copilot Optimization Assessment (English only)
