path links to real links
For Defender links

--- a/microsoft-365/business-premium/TOC.yml
+++ b/microsoft-365/business-premium/TOC.yml
@@ -11,7 +11,7 @@
     - name: Trial user guide - Microsoft 365 Business Premium
       href: m365bp-trial-playbook-microsoft-business-premium.md
     - name: Resources for partners
-      href: ../security/defender-business/mdb-partners.md?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
+      href: /defender-business/mdb-partners?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
 - name: Step 1- Sign in and set up
   items:
     - name: Microsoft 365 Business Premium
@@ -89,7 +89,7 @@
     - name: Overview
       href: m365bp-security-incident-management.md
     - name: Review security recommendations
-      href: ../security/defender-business/mdb-view-tvm-dashboard.md?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
+      href: /defender-business/mdb-view-tvm-dashboard?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
     - name: Review threats detected on devices
       href: m365bp-review-threats-take-action.md
     - name: Review remediation actions on devices
@@ -97,7 +97,7 @@
     - name: Respond to a compromised email account
       href: /defender-office-365/responding-to-a-compromised-email-account?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
     - name: Streaming API (preview)
-      href: ../security/defender-business/mdb-streaming-api.md?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
+      href: /defender-business/mdb-streaming-api?toc=/microsoft-365/business-premium/toc.json&bc=/microsoft-365/business-premium/breadcrumb/toc.json
 - name: Maintain your environment
   href: m365bp-mdb-maintain-environment.md
 - name: Reference
@@ -105,7 +105,7 @@
     - name: Microsoft 365 Business Premium FAQ
       href: microsoft-365-business-faqs.yml
     - name: Microsoft Defender for Business
-      href: ../security/defender-business/index.yml
+      href: /defender-business/index.yml
     - name: Microsoft Defender for Office 365
       href: /defender-office-365/defender-for-office-365
     - name: Microsoft 365 admin content
