--- a/microsoft-365/enterprise/TOC.yml
+++ b/microsoft-365/enterprise/TOC.yml
@@ -197,8 +197,11 @@
         - name: Cross-tenant identity mapping
           href: cross-tenant-identity-mapping.md
 
-        - name: Multitenant collaboration
+        - name: Multitenant organizations
           items:
+            - name: Multitenant org FAQ
+              href: multitenant-org-faq.md
+              displayName: FAQ
             - name: Plan for multitenant orgs
               href: plan-multi-tenant-org-overview.md
             - name: Set up a multitenant org
@@ -212,9 +215,6 @@
 
         - name: Cross-tenant OneDrive migration
           items:
-            - name: Multitenant org FAQ
-              href: multitenant-org-faq.md
-              displayName: FAQ
             - name: Cross-tenant OneDrive migration overview
               href: cross-tenant-onedrive-migration.md
             - name: Step 1. Connect to tenants
